--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,24 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'iac/**'  # Ignore changes in any file within the iac directory
   pull_request:
     branches:
       - master
+    paths-ignore:
+      - 'iac/**'  # Ignore changes in any file within the iac directory
+  workflow_dispatch:  # Allows manual trigger of the workflow
 
 jobs:
   AppCD:
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: true
+          
       - name: Generate IaC
         uses: appcd-dev/action@v0
         env:
@@ -24,4 +34,20 @@ jobs:
           targetCompute: 'k8s' # Choose the target compute platform
           cleanup: 'true' # Cleanup after action
 
-      
+      - name: Commit and Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the GitHub token for authentication
+        run: |
+          # Check for any changes
+          if [ -n "$(git status --porcelain)" ]; then
+            # Add all changes
+            git add .
+
+            # Commit changes
+            git commit -m "Auto-generated infra files by AppCD"
+
+            # Push changes to the main branch
+            git push origin main
+          else
+            echo "No changes to commit"
+          fi
