--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
             git commit -m "Auto-generated infra files by AppCD"
 
             # Push changes to the main branch
-            git push origin main
+            git push origin master
           else
             echo "No changes to commit"
           fi
