--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
             git commit -m "Auto-generated infra files by AppCD"
 
             # Push changes to the main branch
-            git push origin master
+            git push origin HEAD:${{ github.ref_name }}
           else
             echo "No changes to commit"
           fi
