--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,17 +42,14 @@ jobs:
           
       - name: Commit and Push Changes to IaC Repo
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Check for any changes
           if [ -n "$(git status --porcelain)" ]; then
-            # Add all changes
             git add .
-            # Commit changes
             git commit -m "Auto-generated infra files by AppCD"
             
-            # Clone the iac repository
-            git clone https://github.com/your-organization/iac.git iac-repo
+            # Clone the iac repository using the GITHUB_TOKEN
+            git clone https://${GITHUB_TOKEN}@github.com/asarkar157/iac.git iac-repo
             
             # Create the restpie3 subfolder if it doesn't exist
             mkdir -p ./iac-repo/restpie3
@@ -69,8 +66,8 @@ jobs:
             # Commit changes in the iac repository
             git commit -m "Auto-generated infra files by AppCD for restpie3"
             
-            # Push changes to the iac repository
-            git push https://${{ secrets.GITHUB_TOKEN }}@github.com/your-organization/iac.git HEAD:main
+            # Push changes to the iac repository using the GITHUB_TOKEN
+            git push https://${GITHUB_TOKEN}@github.com/asarkar157/iac.git HEAD:main
             
             # Clean up
             cd ..
